@@ -3145,6 +3145,8 @@ S3method(print, check_so_symbols, .print.via.format)
 @noindent
 when @code{print.check_so_symbols} is not needed.
 
+There used to be a limit on the number of @code{S3method} directives: it
+was @code{500} prior to @R{} 3.1.0.
 
 @node Load hooks, useDynLib, Registering S3 methods, Package namespaces
 @subsection Load hooks
