@@ -1111,7 +1111,8 @@ parseNamespaceFile <- function(package, package.lib, mustExist = TRUE)
     importMethods <- list()
     importClasses <- list()
     dynlibs <- character()
-    S3methods <- matrix(NA_character_, 500L, 3L)
+    nS3methods <- 1000L
+    S3methods <- matrix(NA_character_, nS3methods, 3L)
     nativeRoutines <- list()
     nS3 <- 0
     parseDirective <- function(e) {
@@ -1273,8 +1274,16 @@ parseNamespaceFile <- function(package, package.lib, mustExist = TRUE)
                                      deparse(e)),
                             call. = FALSE, domain = NA)
                    nS3 <<- nS3 + 1L
-                   if(nS3 > 500L)
-                       stop("too many 'S3method' directives", call. = FALSE)
+                   if(nS3 > nS3methods) {
+                       old <- S3methods
+                       nold <- nS3methods
+                       nS3methods <<- nS3methods * 2L
+                       new <- matrix(NA_character_, nS3methods, 3L)
+                       ind <- seq_len(nold)
+                       for (i in 1:3) new[ind, i] <- old[ind, i]
+                       S3methods <<- new
+                       rm(old, new)
+                   }
                    S3methods[nS3, seq_along(spec)] <<- asChar(spec)
                },
                stop(gettextf("unknown namespace directive: %s", deparse(e, nlines=1L)),
